# simple-algebra

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  algebra-simple.cabal  cabal.project  ci.nix  flake.nix  hie.yaml  simple-algebra.cabal  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_9-0-1.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2-2.yaml  ghc_9-2.yaml  nix.yaml  stack.yaml  stack_ci.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style_ci.yaml
bench/: Main.hs
ci_scripts/: cabal-fmt.sh  ormolu.sh
diagrams/: clean.sh  hierarchy.tex
docs/: Numeric-Algebra-Additive-AGroup.html  Numeric-Algebra-Additive-AMonoid.html  Numeric-Algebra-Additive-ASemigroup.html  Numeric-Algebra-Additive.html  Numeric-Algebra-Field.html  Numeric-Algebra-MetricSpace.html  Numeric-Algebra-Multiplicative-MEuclidean.html  Numeric-Algebra-Multiplicative-MGroup.html  Numeric-Algebra-Multiplicative-MMonoid.html  Numeric-Algebra-Multiplicative-MSemigroup.html  Numeric-Algebra-Multiplicative.html  Numeric-Algebra-Normed.html  Numeric-Algebra-Ring.html  Numeric-Algebra-Semifield.html  Numeric-Algebra-Semiring.html  Numeric-Algebra-Space-MSemiSpace.html  Numeric-Algebra-Space-MSpace.html  Numeric-Algebra-Space-Module.html  Numeric-Algebra-Space-Semimodule.html  Numeric-Algebra-Space-SemivectorSpace.html  Numeric-Algebra-Space-VectorSpace.html  Numeric-Algebra-Space.html  Numeric-Algebra.html  Numeric-Convert-Integer.html  Numeric-Convert-Internal.html  Numeric-Convert-Rational.html  Numeric-Convert-Real.html  algebra-simple.haddock  doc-index.html  doc-index.json  index.html
docs/src/: Numeric.Algebra.Additive.AGroup.html  Numeric.Algebra.Additive.AMonoid.html  Numeric.Algebra.Additive.ASemigroup.html  Numeric.Algebra.Additive.html  Numeric.Algebra.Field.html  Numeric.Algebra.MetricSpace.html  Numeric.Algebra.Multiplicative.MEuclidean.html  Numeric.Algebra.Multiplicative.MGroup.html  Numeric.Algebra.Multiplicative.MMonoid.html  Numeric.Algebra.Multiplicative.MSemigroup.html  Numeric.Algebra.Multiplicative.html  Numeric.Algebra.Normed.html  Numeric.Algebra.Ring.html  Numeric.Algebra.Semifield.html  Numeric.Algebra.Semiring.html  Numeric.Algebra.Space.MSemiSpace.html  Numeric.Algebra.Space.MSpace.html  Numeric.Algebra.Space.Module.html  Numeric.Algebra.Space.Semimodule.html  Numeric.Algebra.Space.SemivectorSpace.html  Numeric.Algebra.Space.VectorSpace.html  Numeric.Algebra.Space.html  Numeric.Algebra.html  Numeric.Convert.Integer.html  Numeric.Convert.Internal.html  Numeric.Convert.Rational.html  Numeric.Convert.Real.html
nix/: ghc_8-10-7.nix  ghc_9-0-1.nix  ghc_base.nix  sources.nix  stack.nix  stack_base.nix
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh  ormolu_inplace.sh
src/: Algebra.hs
src/Algebra/: Additive.hs  AdditiveMonoid.hs  Field.hs  Fraction.hs  Group.hs  Literal.hs  Module.hs  Multiplicative.hs  MultiplicativeMonoid.hs  Ring.hs  Semiring.hs  VectorSpace.hs
src/Algebra/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
src/Algebra/Multiplicative/: MGroup.hs  MMonoid.hs  MSemigroup.hs
src/Numeric/: Algebra.hs  Data.hs  Literal.hs
src/Numeric/Algebra/: Additive.hs  Field.hs  MetricSpace.hs  Module.hs  Multiplicative.hs  Normed.hs  Ring.hs  Semifield.hs  Semimodule.hs  Semiring.hs  SemivectorSpace.hs  Space.hs  VectorSpace.hs
src/Numeric/Algebra/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
src/Numeric/Algebra/Multiplicative/: MEuclidean.hs  MGroup.hs  MMonoid.hs  MSemigroup.hs
src/Numeric/Algebra/Space/: MSemiSpace.hs  MSpace.hs  Module.hs  Semimodule.hs  SemivectorSpace.hs  VectorSpace.hs
src/Numeric/Class/: Boundless.hs  Division.hs  Literal.hs
src/Numeric/Convert/: Integer.hs  Internal.hs  Rational.hs  Real.hs
src/Numeric/Data/: Fraction.hs  Interval.hs  ModN.hs  ModP.hs  Negative.hs  NonNegative.hs  NonPositive.hs  NonZero.hs  Positive.hs
src/Numeric/Data/ModP/: Internal.hs
src/Numeric/Literal/: Integer.hs  Rational.hs  Real.hs
src/Simple/: Algebra.hs  Literal.hs  NonNat.hs
src/Simple/Algebra/: AMonoid.hs  ASemigroup.hs  Additive.hs  AdditiveMonoid.hs  Data.hs  Field.hs  Group.hs  Literal.hs  MMonoid.hs  MSemigroup.hs  Module.hs  Multiplicative.hs  MultiplicativeMonoid.hs  Ring.hs  Semiring.hs  VectorSpace.hs
src/Simple/Algebra/Data/: BoundedN.hs  BoundedNat.hs  Negative.hs  NonNat.hs  NonNegative.hs  NonPositive.hs  Positive.hs  Utils.hs
test/doctest/: Main.hs
test/props/: Equality.hs  Gens.hs  Main.hs  Utils.hs
test/props/Test/: Fraction.hs
test/props/Test/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
test/props/Test/Algebra/: MetricSpace.hs  Normed.hs
test/props/Test/Algebra/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
test/props/Test/Algebra/Multiplicative/: MEuclidean.hs  MGroup.hs  MMonoid.hs  MSemigroup.hs
test/props/Test/Data/: Fraction.hs  Interval.hs  ModN.hs  ModP.hs  NonNegative.hs  NonZero.hs  Positive.hs
test/props/Test/Data/ModP/: Internal.hs
test/props/Test/Multiplicative/: MGroup.hs  MMonoid.hs  MSemigroup.hs
tools/: format.sh  haddock.sh
