cabal-version:      2.4
name:               algebra-simple
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.1
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/algebra-simple/
bug-reports:        https://github.com/tbidne/algebra-simple/issues
synopsis:
  A library that provides an alternative mathematical interface to Num.

description:
  @algebra-simple@ intends to provide a simple, reasonably principled
  interface to typical mathematical operations (i.e. addition, subtraction,
  multiplication, division). See "Numeric.Algebra" for the documentation.

category:           Math, Algebra
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/algebra-simple

common common-exts
  default-extensions:
    DataKinds
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NumericUnderscores
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Numeric.Algebra
    Numeric.Algebra.Additive
    Numeric.Algebra.Additive.AGroup
    Numeric.Algebra.Additive.AMonoid
    Numeric.Algebra.Additive.ASemigroup
    Numeric.Algebra.Field
    Numeric.Algebra.Module
    Numeric.Algebra.Multiplicative
    Numeric.Algebra.Multiplicative.MGroup
    Numeric.Algebra.Multiplicative.MMonoid
    Numeric.Algebra.Multiplicative.MSemigroup
    Numeric.Algebra.Ring
    Numeric.Algebra.Semiring
    Numeric.Algebra.VectorSpace
    Numeric.Data
    Numeric.Data.Fraction
    Numeric.Data.Negative
    Numeric.Data.NonNegative
    Numeric.Data.NonZero
    Numeric.Data.Positive
    Numeric.Literal

  build-depends:
    , base              >=4.14.0.0 && <4.17
    , deepseq           ^>=1.4.4.0
    , template-haskell  >=2.16.0.0 && <2.19.0.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest  >=0.16.3 && <0.21

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite props
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Equality
    Gens
    MaxRuns
    Test.Additive.AGroup
    Test.Additive.AMonoid
    Test.Additive.ASemigroup
    Test.Fraction
    Test.Multiplicative.MGroup
    Test.Multiplicative.MMonoid
    Test.Multiplicative.MSemigroup
    Utils

  build-depends:
    , algebra-simple
    , base
    , hedgehog        >=1.0.2   && <1.2
    , tagged          ^>=0.8.6
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.0.0.2 && <1.2

  hs-source-dirs:   test/props
  default-language: Haskell2010

benchmark bench
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , algebra-simple
    , base
    , criterion       ^>=1.5.6.0

  hs-source-dirs:   bench
  default-language: Haskell2010
