cabal-version:      2.4
name:               algebra-simple
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.3 || ==9.4.2
copyright:          2021-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/algebra-simple/
bug-reports:        https://github.com/tbidne/algebra-simple/issues
synopsis:           An alternative mathematical interface to Num.
description:
  @algebra-simple@ intends to provide a simple, reasonably principled
  interface to typical mathematical operations (i.e. addition, subtraction,
  multiplication, division). This package is organized into three sections:
  .
  1. "Numeric.Algebra": The typeclass replacements for 'Num'; this package's
  raison d'être.
  .
  2. "Numeric.Data.NonZero": Smart constructor for a @NonZero@ type.
  .
  3. "Numeric.Literal": Typeclasses for literal conversions.

category:           Math, Algebra
extra-source-files:
  CHANGELOG.md
  README.md

extra-doc-files:    diagrams/hierarchy.png

source-repository head
  type:     git
  location: https://github.com/tbidne/algebra-simple

common common-exts
  default-extensions:
    NoStarIsType
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Numeric.Algebra
    Numeric.Algebra.Additive
    Numeric.Algebra.Additive.AGroup
    Numeric.Algebra.Additive.AMonoid
    Numeric.Algebra.Additive.ASemigroup
    Numeric.Algebra.Field
    Numeric.Algebra.Multiplicative
    Numeric.Algebra.Multiplicative.MEuclidean
    Numeric.Algebra.Multiplicative.MGroup
    Numeric.Algebra.Multiplicative.MMonoid
    Numeric.Algebra.Multiplicative.MSemigroup
    Numeric.Algebra.Normed
    Numeric.Algebra.Ring
    Numeric.Algebra.Semifield
    Numeric.Algebra.Semiring
    Numeric.Algebra.Space
    Numeric.Algebra.Space.Module
    Numeric.Algebra.Space.MSemiSpace
    Numeric.Algebra.Space.MSpace
    Numeric.Algebra.Space.Semimodule
    Numeric.Algebra.Space.SemivectorSpace
    Numeric.Algebra.Space.VectorSpace
    Numeric.Data.NonZero
    Numeric.Literal.Integer
    Numeric.Literal.Rational

  build-depends:
    , base              >=4.14.0.0 && <4.18
    , deepseq           ^>=1.4.4.0
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0 && <2.20

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest-parallel  ^>=0.2
    , env-guard         ^>=0.2

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite props
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Equality
    Gens
    Test.Algebra.Additive.AGroup
    Test.Algebra.Additive.AMonoid
    Test.Algebra.Additive.ASemigroup
    Test.Algebra.Multiplicative.MGroup
    Test.Algebra.Multiplicative.MMonoid
    Test.Algebra.Multiplicative.MSemigroup
    Test.Data.NonZero
    Test.TestBounds
    Utils

  build-depends:
    , algebra-simple
    , base
    , hedgehog        >=1.0.2   && <1.3
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.0.0.2 && <1.5

  hs-source-dirs:   test/props
  default-language: Haskell2010
