cabal-version:      2.4
name:               algebra-simple
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.7
   || ==9.6.3
   || ==9.8.1
   || ==9.10.1

copyright:          2021-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/algebra-simple/
bug-reports:        https://github.com/tbidne/algebra-simple/issues
synopsis:           An alternative mathematical interface to Num.
description:
  @algebra-simple@ intends to provide a simple, reasonably principled
  interface to typical mathematical operations (i.e. addition, subtraction,
  multiplication, division). This package is organized into two sections:
  .
  1. "Numeric.Algebra": The typeclass replacements for 'Num'; this package's
  raison d'être.
  .
  2. "Numeric.Literal": Typeclasses for literal conversions.

category:           Math, Algebra
extra-source-files:
  CHANGELOG.md
  README.md

extra-doc-files:    diagrams/hierarchy.png

source-repository head
  type:     git
  location: https://github.com/tbidne/algebra-simple

common common-exts
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-exts
  exposed-modules:
    Numeric.Algebra
    Numeric.Algebra.Additive
    Numeric.Algebra.Additive.AGroup
    Numeric.Algebra.Additive.AMonoid
    Numeric.Algebra.Additive.ASemigroup
    Numeric.Algebra.Field
    Numeric.Algebra.Multiplicative
    Numeric.Algebra.Multiplicative.MEuclidean
    Numeric.Algebra.Multiplicative.MGroup
    Numeric.Algebra.Multiplicative.MMonoid
    Numeric.Algebra.Multiplicative.MSemigroup
    Numeric.Algebra.Normed
    Numeric.Algebra.Ring
    Numeric.Algebra.Semifield
    Numeric.Algebra.Semiring
    Numeric.Algebra.Space
    Numeric.Algebra.Space.Module
    Numeric.Algebra.Space.MSemiSpace
    Numeric.Algebra.Space.MSpace
    Numeric.Algebra.Space.Semimodule
    Numeric.Algebra.Space.SemivectorSpace
    Numeric.Algebra.Space.VectorSpace
    Numeric.Literal.Integer
    Numeric.Literal.Rational

  build-depends:   base >=4.14.0.0 && <4.21
  hs-source-dirs:  src

test-suite props
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Equality
    Gens
    Test.Algebra.Additive.AGroup
    Test.Algebra.Additive.AMonoid
    Test.Algebra.Additive.ASemigroup
    Test.Algebra.Multiplicative.MGroup
    Test.Algebra.Multiplicative.MMonoid
    Test.Algebra.Multiplicative.MSemigroup
    Test.TestBounds
    Utils

  build-depends:
    , algebra-simple
    , base
    , hedgehog        >=1.0.2   && <1.5
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.0.0.2 && <1.5

  hs-source-dirs: test/props
  ghc-options:    -threaded -with-rtsopts=-N
