cabal-version:      2.4
name:               simple-algebra
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/simple-algebra/
bug-reports:        https://github.com/tbidne/simple-algebra/issues
synopsis:           A utility program for retrieving system information.
description:
  Please see the README at https://github.com/tbidne/simple-algebra/#readme

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/simple-algebra

common common-exts
  default-extensions:
    FunctionalDependencies
    ImportQualifiedPost
    MultiParamTypeClasses
    PatternSynonyms

library
  import:           common-exts
  exposed-modules:
    Simple.Algebra
    Simple.Algebra.Field
    Simple.Algebra.Group
    Simple.Algebra.Module
    Simple.Algebra.Ring
    Simple.Algebra.VectorSpace
    Simple.Literal

  build-depends:    base ^>=4.14.0.0
  hs-source-dirs:   src
  default-language: Haskell2010
