cabal-version:      2.4
name:               simple-algebra
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/simple-algebra/
bug-reports:        https://github.com/tbidne/simple-algebra/issues
synopsis:
  A library that provides an alternative mathematical interface to Num.

description:
  @simple-algebra@ intends to provide a simple, reasonably principled
  interface to typical mathematical operations (i.e. addition, subtraction,
  multiplication, division). See "Simple.Algebra" for the documentation.

category:           Math, Algebra
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/simple-algebra

common common-exts
  default-extensions:
    DataKinds
    FlexibleInstances
    FunctionalDependencies
    ImportQualifiedPost
    MultiParamTypeClasses
    PatternSynonyms
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications

library
  import:           common-exts
  exposed-modules:
    Simple.Algebra
    Simple.Algebra.Additive
    Simple.Algebra.AdditiveMonoid
    Simple.Algebra.Data
    Simple.Algebra.Data.BoundedNat
    Simple.Algebra.Data.Negative
    Simple.Algebra.Data.NonNat
    Simple.Algebra.Data.NonNegative
    Simple.Algebra.Data.NonPositive
    Simple.Algebra.Data.Positive
    Simple.Algebra.Data.Utils
    Simple.Algebra.Field
    Simple.Algebra.Group
    Simple.Algebra.Literal
    Simple.Algebra.Module
    Simple.Algebra.Multiplicative
    Simple.Algebra.MultiplicativeMonoid
    Simple.Algebra.Ring
    Simple.Algebra.Semiring
    Simple.Algebra.VectorSpace

  build-depends:    base ^>=4.14.0.0
  hs-source-dirs:   src
  default-language: Haskell2010
